# api-client-python

./: .env.example  .gitignore  Justfile  pyproject.toml
api_client/: APIClient.py  APIError.py  BaseAPIClient.py
api_client/schemas/: pydanticobjectid.py
src/: APIClient.py  __init__.py
test/: test_api_routes.py
tests/: test_api_routes.py
zeitclient/schemas/: loops.py  objectid.py  users.py
