[tool.poetry]
name = "zeit-api-client"
version = "0.1.0"
description = ""
authors = ["Gerrit Egnew <gerrit.egnew@zeitmedical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = ">=2.22,<=2.28.1"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ipython = "^8.12.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
